[gd_scene load_steps=4 format=3 uid="uid://bjng1m2u6rpc2"]

[ext_resource type="Script" path="res://Control/leave_area_hotspot.gd" id="1_taqcs"]
[ext_resource type="FontFile" uid="uid://oqud717w80kb" path="res://Assets/Fonts/EastSeaDokdo-Regular.ttf" id="2_4f7dp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cpa5d"]
size = Vector2(54, 51)

[node name="LeaveAreaHotspot" type="Area2D" groups=["door"]]
position = Vector2(994, 775)
script = ExtResource("1_taqcs")
metadata/_edit_group_ = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2(-909.6, -780.4)
polygon = PackedVector2Array(682.6, 417.4, 684.6, 781.4, 1147.6, 781.4, 1143.6, 426.4)

[node name="RoomName" type="Label" parent="."]
visible = false
offset_left = -87.6
offset_top = -275.4
offset_right = 85.4
offset_bottom = -171.4
theme_override_fonts/font = ExtResource("2_4f7dp")
theme_override_font_sizes/font_size = 100
text = "Lorem"

[node name="PlayerSpawnPoint" type="CollisionShape2D" parent="."]
position = Vector2(-1, -28)
shape = SubResource("RectangleShape2D_cpa5d")

[connection signal="body_entered" from="." to="." method="_on_player_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_player_body_exited"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
